# gary-localhost-installer

./: .env.example  .gitattributes  .gitignore  AUTO_UPDATE_PLAN.md  CHANGELOG.md  README.md  README.txt  SHA256SUMS.txt  build.py  gary4juce-control-center.spec  gary4juce-installer.spec  gary4juce-setup.iss  installer.py  launcher.py  requirements-dev.txt  requirements.txt
control-center/: index.html  package-lock.json  package.json
control-center/src/: App.svelte  main.ts  styles.css  vite-env.d.ts
control-center/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.updater.conf.json
control-center/src-tauri/capabilities/: default.json
control-center/src-tauri/scripts/: generate_installer_assets.ps1  generate_installer_audio.ps1  generate_update_feeds.ps1  stage_runtime_resources.mjs  stage_runtime_resources.sh
control-center/src-tauri/src/: lib.rs  manifest.rs  model_manager.rs  service_manager.rs  update.rs
control-center/src-tauri/windows/: installer-english.nsh  nsis-hooks.nsh
docs/: ace-step-lora-training.md  auto-updater.md  custom-model-backends.md
docs/releasing/: PHASE2_RELEASE.md
docs/updates/: README.md
scripts/rocm/: windows-pytorch-preflight.ps1
services/: local_session_store.py
services/carey/: ACE_TRAINER_PROVENANCE.md  COVER_NOISE_STRENGTH_VARIANTS.md  README.md  SIDESTEP_MIT_LICENSE  ace_training_dataset.py  bpm_analysis.py  build_captions.py  carey_wrapper.py  carey_wrapper_test.py  default_captions.json  key_analysis.py  pyproject.toml  requirements-acestep.txt  requirements.lock.txt  requirements.txt  train_lora_job.py
services/foundation/: Dockerfile.reference  api_foundation.py  (+3 more)
smoke-tests/: carey_ace_training_smoke.py  sa3_loop_smoke.py
(+142 files in other folders)
